--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,39 @@
-name: cpp_pybind11_demo
+name: quantlib-env
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - python=3.11
-  - pip
-  - pybind11
-  - cmake
-  - ninja
-  - pip:
-      - pytest
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - icu=75.1=he02047a_0
+  - ld_impl_linux-64=2.44=h1423503_1
+  - libboost=1.88.0=hed09d94_1
+  - libexpat=2.7.1=hecca717_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_4
+  - libgcc-ng=15.1.0=h69a702a_4
+  - libgomp=15.1.0=h767d61c_4
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libsqlite=3.50.4=h0c1763c_0
+  - libstdcxx=15.1.0=h8f9b012_4
+  - libstdcxx-ng=15.1.0=h4852527_4
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=h2d0b736_3
+  - openssl=3.5.2=h26f9b46_0
+  - pip=25.2=pyh8b19718_0
+  - pybind11=3.0.0=pyh9380348_1
+  - pybind11-global=3.0.0=pyhf748d72_1
+  - python=3.10.18=hd6af730_0_cpython
+  - quantlib=1.39=ha43c256_1
+  - readline=8.2=h8c095d6_2
+  - setuptools=80.9.0=pyhff2d567_0
+  - tk=8.6.13=noxft_hd72426e_102
+  - tzdata=2025b=h78e105d_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - zstd=1.5.7=hb8e6e7a_2
+prefix: /home/harvey/miniconda3/envs/quantlib-env
